k8s/prod/mediawiki.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mediawiki
  labels:
    app: mediawiki
spec:
  replicas: 6
  template:
    metadata:
      labels:
        app: mediawiki
        tier: frontend
    spec:
      containers:
      - image: tfwiki/mediawiki:1.0.0-beta2
        name: mediawiki 
        readinessProbe:
          timeoutSeconds: 5
          httpGet:
            path: /wiki/Main_Page
            port: 80
        ports:
        - containerPort: 80
          name: mediawiki
        volumeMounts:
          - name: mediawiki-images
            mountPath: /var/www/html/w/images
      - image: gcr.io/cloudsql-docker/gce-proxy:1.11
        name: cloudsql-proxy
        command: ["/cloud_sql_proxy", "--dir=/cloudsql",
                  "-instances=tfwiki-182108:us-west1:tfwiki-production=tcp:3306",
                  "-credential_file=/secrets/cloudsql/credentials.json"]
        volumeMounts:
          - name: cloudsql-instance-credentials
            mountPath: /secrets/cloudsql
            readOnly: true
          - name: ssl-certs
            mountPath: /etc/ssl/certs
          - name: cloudsql
            mountPath: /cloudsql
      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
        - name: ssl-certs
          hostPath:
            path: /etc/ssl/certs
        - name: cloudsql
          emptyDir:
        - name: mediawiki-images
          persistentVolumeClaim:
            claimName: nfs
