k8s/prod/nfs.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    creationTimestamp: null
    labels:
      role: nfs-server
    name: nfs-server
  spec:
    progressDeadlineSeconds: 2147483647
    replicas: 1
    revisionHistoryLimit: 2147483647
    selector:
      matchLabels:
        role: nfs-server
    strategy:
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 1
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          role: nfs-server
      spec:
        containers:
        - image: gcr.io/google_containers/volume-nfs:0.8
          imagePullPolicy: IfNotPresent
          name: nfs-server
          ports:
          - containerPort: 2049
            name: nfs
            protocol: TCP
          - containerPort: 20048
            name: mountd
            protocol: TCP
          - containerPort: 111
            name: rpcbind
            protocol: TCP
          resources: {}
          securityContext:
            privileged: true
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /exports
            name: mediawiki-images
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - gcePersistentDisk:
            fsType: ext4
            pdName: tfwiki-production-mediawiki-images
          name: mediawiki-images
  status: {}
- apiVersion: v1
  kind: PersistentVolume
  metadata:
    creationTimestamp: null
    name: nfs
  spec:
    accessModes:
    - ReadWriteMany
    capacity:
      storage: 500Gi
    nfs:
      path: /
      server: nfs-server.default.svc.cluster.local
    persistentVolumeReclaimPolicy: Retain
    volumeMode: Filesystem
  status:
    phase: Pending
kind: List
metadata: {}
